# pkg-glb

./: Makefile  Makefile.in  config.h  config.h.in  config.status  configure
debian/: changelog  control  copyright  glb.default  glb.default.ex  glbd.1  init.d  init.d.ex  init.d.lsb.ex  manpages  rules  watch
debian/patches/: 01_fix_ftbs_configure.patch
doc/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  glb_cmd.c  glb_cmd.h  glb_control.c  glb_control.h  glb_daemon.c  glb_daemon.h  glb_dst.c  glb_dst.h  glb_listener.c  glb_listener.h  glb_log.c  glb_log.h  glb_main.c  glb_misc.h  glb_pool.c  glb_pool.h  glb_pool_stats.h  glb_router.c  glb_router.h  glb_signal.c  glb_signal.h  glb_socket.c  glb_socket.h  glb_time.h
src/.deps/: glb_cmd.Po  glb_control.Tpo  glb_daemon.Po  glb_dst.Po  glb_listener.Po  glb_log.Po  glb_pool.Po  glb_router.Po  glb_signal.Po  glb_socket.Po
