# Copyright (C) 2008 Codership Oy <info@codership.com>
# $Id: Makefile.am 37 2008-07-15 17:08:55Z alex $

sbin_PROGRAMS = glbd

glbd_SOURCES = \
	glb_log.c      \
	glb_signal.c   \
	glb_daemon.c   \
	glb_socket.c   \
	glb_dst.c      \
	glb_cmd.c      \
	glb_router.c   \
	glb_pool.c     \
	glb_listener.c \
	glb_control.c  \
	glb_main.c     \
	*.h

.PHONY: all clean

tags: TAGS

